force-app/main/default/objects/Saved_Deals__c/Saved_Deals__c.object-meta.xml
<CustomObject>
    <label>Sales Lead</label>
    <nameField>
        <label>Sales Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Leads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>