force-app/main/default/objects/Saved_Deals__c/fields/Agent_Handling__c.field-meta.xml
<CustomField>
    <fullName>Agent_Handling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Handling</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Saved_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>