force-app/main/default/objects/Saved_Deals__c/fields/Deal_Title__c.field-meta.xml
<CustomField>
    <fullName>Deal_Title__c</fullName>
    <formula>Deal__r.title__c</formula>
    <label>Deal Title</label>
    <type>Text</type>
</CustomField>