force-app/main/default/objects/Saved_Deals__c/fields/Drop_off__c.field-meta.xml
<CustomField>
    <fullName>Drop_off__c</fullName>
    <label>Drop off</label>
    <length>255</length>
    <type>Text</type>
</CustomField>