force-app/main/default/objects/Saved_Deals__c/fields/isexpired__c.field-meta.xml
<CustomField>
    <fullName>isexpired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isexpired</label>
    <type>Checkbox</type>
</CustomField>