force-app/main/default/objects/Saved_Deals__c/fields/isLoginUser__c.field-meta.xml
<CustomField>
    <fullName>isLoginUser__c</fullName>
    <formula>Agent_Handling__c == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLoginUser</label>
    <type>Checkbox</type>
</CustomField>