force-app/main/default/objects/Saved_Deals__c/fields/Lead_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes__c</fullName>
    <label>Lead Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>