force-app/main/default/objects/Saved_Deals__c/fields/LoggedInUser__c.field-meta.xml
<CustomField>
    <fullName>LoggedInUser__c</fullName>
    <formula>IF( CreatedBy.Id = $User.Id, TRUE, FALSE)</formula>
    <label>LoggedInUser</label>
    <type>Checkbox</type>
</CustomField>