force-app/main/default/objects/Saved_Deals__c/fields/Reason_Not_Converted__c.field-meta.xml
<CustomField>
    <fullName>Reason_Not_Converted__c</fullName>
    <label>Reason Not Converted L1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>too expensive</fullName>
                <label>Too Expensive</label>
            </value>
            <value>
                <fullName>Customer No Longer Wants</fullName>
            </value>
            <value>
                <fullName>Lead Expired</fullName>
            </value>
            <value>
                <fullName>Order Expired</fullName>
            </value>
            <value>
                <fullName>Order booked by other Agent</fullName>
                <label>Order booked by Other Agent</label>
            </value>
            <value>
                <fullName>Booked with a competitor</fullName>
            </value>
            <value>
                <fullName>Don&apos;t want to risk waiting for minimum number</fullName>
            </value>
            <value>
                <fullName>Can&apos;t book as children not old enough</fullName>
            </value>
            <value>
                <fullName>Dates out of range 2024</fullName>
            </value>
            <value>
                <fullName>Vaccination uncertainty/ Entry requirements</fullName>
            </value>
            <value>
                <fullName>Availability specifically too close to travel date</fullName>
            </value>
            <value>
                <fullName>Surcharge cost for departure city</fullName>
            </value>
            <value>
                <fullName>Wanted to change arrival/departure city</fullName>
            </value>
            <value>
                <fullName>Accommodation deal doesn&apos;t include flights</fullName>
            </value>
            <value>
                <fullName>Internal - Unable to complete purchase</fullName>
            </value>
            <value>
                <fullName>Date affected</fullName>
            </value>
            <value>
                <fullName>Flight affected</fullName>
            </value>
            <value>
                <fullName>We didn&apos;t have want the customer was after</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Only wanted deposit</fullName>
            </value>
            <value>
                <fullName>Wanted payment flexibility</fullName>
            </value>
            <value>
                <fullName>Wanted specific airline booked</fullName>
            </value>
            <value>
                <fullName>Not ready to purchase -general questions</fullName>
                <label>Not ready to purchase-general questions</label>
            </value>
            <value>
                <fullName>Blackout dates on AE and SB</fullName>
                <isActive>false</isActive>
                <label>Blackout dates on AE and SB</label>
            </value>
            <value>
                <fullName>Can&apos;t customise</fullName>
                <isActive>false</isActive>
                <label>Can&apos;t customise</label>
            </value>
            <value>
                <fullName>Competitor better price</fullName>
                <isActive>false</isActive>
                <label>Competitor Better Price</label>
            </value>
            <value>
                <fullName>Didn’t want to include flights</fullName>
                <isActive>false</isActive>
                <label>Didn’t Want to Include Flights</label>
            </value>
            <value>
                <fullName>Internal - No Allocation</fullName>
                <isActive>false</isActive>
                <label>Internal - No Allocation</label>
            </value>
            <value>
                <fullName>Internal - Unable To Complete Request</fullName>
                <isActive>false</isActive>
                <label>Internal - Unable to Complete Request</label>
            </value>
            <value>
                <fullName>Not Ready To Purchase - General Questions</fullName>
                <isActive>false</isActive>
                <label>Not Ready To Purchase - General Questions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>