force-app/main/default/objects/Saved_Deals__c/fields/Reason_Not_Converted_L2__c.field-meta.xml
<CustomField>
    <fullName>Reason_Not_Converted_L2__c</fullName>
    <label>Reason Not Converted L2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Not_Converted__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested triple share</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t accommodate family</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t accommodate children U12</fullName>
            </value>
            <value>
                <fullName>Free text section for answer</fullName>
            </value>
            <value>
                <fullName>Booked with a competitor - Price</fullName>
            </value>
            <value>
                <fullName>Booked with a competitor - More suitable Itinerary</fullName>
            </value>
            <value>
                <fullName>Booked with a competitor - can customise</fullName>
            </value>
            <value>
                <fullName>Blackout dates on AE and SB</fullName>
            </value>
            <value>
                <fullName>Requested 2024 dates</fullName>
            </value>
            <value>
                <fullName>Dates pax want NA</fullName>
            </value>
            <value>
                <fullName>Availability specifically too close to travel date</fullName>
            </value>
            <value>
                <fullName>Wanted business class and not available</fullName>
            </value>
            <value>
                <fullName>Wanted specific airline booked</fullName>
            </value>
            <value>
                <fullName>Can&apos;t customise</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t want flights included/wanted flight with it</fullName>
            </value>
            <value>
                <fullName>Tour</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Notes section</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>