force-app/main/default/objects/Saved_Deals__c/fields/SFID__c.field-meta.xml
<CustomField>
    <fullName>SFID__c</fullName>
    <label>SFID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>