force-app/main/default/objects/Saved_Deals__c/fields/TAD_Order__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAD Order</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipName>Saved_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>