force-app/main/default/objects/Saved_Deals__c/fields/why_lead_not_converted__c.field-meta.xml
<CustomField>
    <fullName>why_lead_not_converted__c</fullName>
    <label>why lead not converted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>not the decision-maker</fullName>
            </value>
            <value>
                <fullName>too expensive</fullName>
            </value>
            <value>
                <fullName>Only wanted to pay deposit</fullName>
            </value>
            <value>
                <fullName>Competitor better price</fullName>
            </value>
            <value>
                <fullName>Didn’t want to include flights</fullName>
            </value>
            <value>
                <fullName>Not ready to purchase - general questions</fullName>
            </value>
            <value>
                <fullName>Order expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>