force-app/main/default/objects/Saved_Deals__c/recordTypes/App.recordType-meta.xml
<RecordType>
    <fullName>App</fullName>
    <active>true</active>
    <label>App</label>
</RecordType>