force-app/main/default/objects/Saved_Deals__c/recordTypes/Phone_Lead.recordType-meta.xml
<RecordType>
    <fullName>Phone_Lead</fullName>
    <active>true</active>
    <label>Phone Lead</label>
</RecordType>