force-app/main/default/objects/Saved_Deals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Deal__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deal__c</field>
        <operation>equals</operation>
        <value>4369</value>
    </filters>
    <label>All</label>
</ListView>