force-app/main/default/objects/Saved_Deals__c/listViews/Closed_Not_Converted.listView-meta.xml
<ListView>
    <fullName>Closed_Not_Converted</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Deal__c</columns>
    <columns>TAD_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Reason_Not_Converted__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed Not Converted</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Saved_Deals__c.Phone_Lead</value>
    </filters>
    <filters>
        <field>Deal__c</field>
        <operation>equals</operation>
        <value>4837</value>
    </filters>
    <label>Closed Not Converted Phone Lead</label>
</ListView>