force-app/main/default/objects/Saved_Deals__c/listViews/GC_In_Progress_Phone_Lead.listView-meta.xml
<ListView>
    <fullName>GC_In_Progress_Phone_Lead</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Deal__c</columns>
    <columns>TAD_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Reason_Not_Converted__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress,Closed Not Converted</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Saved_Deals__c.Phone_Lead</value>
    </filters>
    <label>GC In-Progress Phone Lead</label>
</ListView>