force-app/main/default/objects/Saved_Deals__c/listViews/In_Progress.listView-meta.xml
<ListView>
    <fullName>In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Deal__c</columns>
    <columns>TAD_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Reason_Not_Converted__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>In-Progress Phone Lead</label>
</ListView>