force-app/main/default/objects/Saved_Deals__c/listViews/Mobile_App.listView-meta.xml
<ListView>
    <fullName>Mobile_App</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Deal__c</columns>
    <columns>TAD_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Lead_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Saved_Deals__c.App</value>
    </filters>
    <label>Mobile App</label>
</ListView>