force-app/main/default/objects/Saved_Deals__c/listViews/My_Sales_Leads.listView-meta.xml
<ListView>
    <fullName>My_Sales_Leads</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Sales Leads</label>
</ListView>