force-app/main/default/objects/Saved_Deals__c/listViews/My_Saved_Deal_In_Progress.listView-meta.xml
<ListView>
    <fullName>My_Saved_Deal_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Deal__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Status__c</columns>
    <columns>TAD_Order__c</columns>
    <columns>Reason_Not_Converted__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>Adam Bennett</value>
    </filters>
    <label>My Saved Deal - In Progress</label>
</ListView>