force-app/main/default/objects/Saved_Deals__c/listViews/My_Saved_Deals_In_Progress.listView-meta.xml
<ListView>
    <fullName>My_Saved_Deals_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Deal_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isLoginUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>My Saved Deals-In Progress</label>
</ListView>